--- a/пераклады гульні/v1.2.0/Belarusian.Core/ModuleData/Languages/BYl/Native/std_native_strings_xml_by.xml
+++ b/пераклады гульні/v1.2.0/Belarusian.Core/ModuleData/Languages/BYl/Native/std_native_strings_xml_by.xml
@@ -5,11 +5,11 @@
     <string id="05loYcST" text="Udar pa Ščycie na Śpinie" />
     <string id="05w8Tl7n" text="Step" />
     <string id="0cpbEvsG" text="Stary Tvar" />
-    <string id="0DBQGaka" text="Naniesiena škoda najezdam dzidaju!" />
-    <string id="0ezfbORI" text="Narychtoŭka Typu Hulni" />
+    <string id="0DBQGaka" text="Naniesiena škoda najezdam dzidaj!" />
+    <string id="0ezfbORI" text="Padrychtavany Typ Hulni" />
     <string id="0HTNYQz2" text="Pieraklučyć" />
     <string id="0P89VyAQ" text="Asimietryja Tvaru" />
-    <string id="0WHQKap4" text="Abmiežavańnie Času Abrańnia Ekipijavańnia (siekundaŭ)" />
+    <string id="0WHQKap4" text="Abmiežavańnie Času Abrańnia Ekipijavańnia (siakund)" />
     <string id="0xJ3qIlJ" text="Linija Skivicy" />
     <string id="180DfbQU" text="Treniroŭčaje Pole" />
     <string id="1b2dfc0n" text="Zapyt na dałučeńnie da partyi adchileny." />
@@ -25,17 +25,17 @@
     <string id="22MOa4Fc" text="Vonkavaja Vyšynia Vačej" />
     <string id="23INS6nf" text="Patrabujecca Parol" />
     <string id="26SJhCRD" text="Zamianić na" />
-    <string id="2blpQ3OQ" text="Markavańnie" />
+    <string id="2blpQ3OQ" text="Prykmiety" />
     <string id="2d0H47C8" text="Adlehłaść pamiž Vačami" />
     <string id="2G3QpSDk" text="Vusny ŭvahnutaść/vypukłaść" />
     <string id="2KrDfHI8" text="Nie ŭdałosia dałučycca da partyi z-za naładaŭ dazvołu płatformy." />
     <string id="2QzgefNF" text="Vaha Tvaru" />
     <string id="2Rf2ChRD" text="Hłybinia Bryvoŭ" />
-    <string id="2uynGJbP" text="Pieradavajemyja Vajary" />
+    <string id="2uynGJbP" text="Vajary na Pieradaču" />
     <string id="3AInGztr" text="Tors" />
     <string id="3APdsKEi" text="Kidalny Nož" />
     <string id="3aX5gXmJ" text="Koler Skury" />
-    <string id="3EbTklMi" text="Vy atrymali novy značok: {BADGE_NAME}." />
+    <string id="3EbTklMi" text="Vy atrymali novuju adznaku: {BADGE_NAME}." />
     <string id="3Kkya96j" text="Naha" />
     <string id="3kqFHkZz" text="Taŭščynia Vusnaŭ" />
     <string id="3syV6ymi" text="tupoj" />
@@ -49,7 +49,7 @@
     <string id="4jv2sW4U" text="Handlovy Post" />
     <string id="4NaOKslb" text="-" />
     <string id="4ompPd8W" text="Vašy kłan padzialiŭsia novaj abjavaj." />
-    <string id="4PrfimcK" text="Značok" />
+    <string id="4PrfimcK" text="Adznaka" />
     <string id="4SWcDUJC" text="Krepaść Ajzar" />
     <string id="4wLU6s4S" text="Žyvot" />
     <string id="4yiB8CRO" text="Nie!" />
@@ -64,7 +64,7 @@
     <string id="621DbiOw" text="Asimietryja Nosa" />
     <string id="64n3piBf" text="Usiaho Hulniaŭ" />
     <string id="66aByatH" text="Dazvolić Tekst" />
-    <string id="6DBVzw9r" text="Zborka" />
+    <string id="6DBVzw9r" text="Kamplekcyja" />
     <string id="6usZYAVm" text="Kamunikacyjnaja Abraza" />
     <string id="6yZnboe6" text="Pamier Vačnicy" />
     <string id="74tYdiOb" text="Abirajcie vajaroŭ z rozumam u adpaviednaści z patrebami vašaj kamandy. Kolkaść vajaroŭ vyznačajecca ich siłaju." />
@@ -154,7 +154,7 @@
     <string id="Dxmq32qW" text="Ataka" />
     <string id="dZ4xp6Lu" text="Daŭžynia Skroni" />
     <string id="e0KdfaNe" text="Zachavać jak" />
-    <string id="e139gKZc" text="Viarnucca ŭ Hulniu" />
+    <string id="e139gKZc" text="Viarnucca da Hulni" />
     <string id="E3tCWX7w" text="Kvadrat" />
     <string id="eALf5d30" text="Dziakuj!" />
     <string id="ecUwABe2" text="Pustelnia" />
@@ -369,9 +369,9 @@
     <string id="tUETZiIp" text="Šałom" />
     <string id="tvDuF1vU" text="Chutkaść Abłohavaj Viežy (adsotkaŭ)" />
     <string id="tvHQcaC1" text="Vyšynia Skułaŭ" />
-    <string id="tYuSNFuD" text="Znački" />
+    <string id="tYuSNFuD" text="Adznaki" />
     <string id="U1em3vrJ" text="Plečy" />
-    <string id="U3LxBtL0" text="Uviadzicie parol" />
+    <string id="U3LxBtL0" text="Nadrukujcie parol" />
     <string id="U4xlUBHg" text="Šyrynia Nosa" />
     <string id="U6h8eatq" text="Kamandny Matč da Śmierci" />
     <string id="u8j8nN5U" text="Tvaram da Voraha" />
@@ -381,7 +381,7 @@
     <string id="UEmw71kN" text="{REQUESTER} adpraviŭ vam siabroŭski zapyt." />
     <string id="uGM8DWrm" text="Koń" />
     <string id="UHIZLFBn" text="Zabity {TROOP_NAME}" />
-    <string id="UJaQuEpD" text="Pieraklučyć Siadłańnie Kania" />
+    <string id="UJaQuEpD" text="Asiadłać/Źleści z Kania" />
     <string id="Umb8XsZH" text="Kolučaj" />
     <string id="UPH3hI5P" text="Stvareńnie Matča" />
     <string id="UQabkhbG" text="Najezd kania nanios {DAMAGE} {DAMAGE_TYPE} škody." />
@@ -389,7 +389,7 @@
     <string id="UrZvjCfE" text="Vašy koń atrymaŭ {DAMAGE} {DAMAGE_TYPE} škody." />
     <string id="UUKzc88q" text="Kamiera Naziralnika" />
     <string id="UvIsHvrt" text="Raka" />
-    <string id="V1kxYbRp" text="Pieraklučyć Ahoń" />
+    <string id="V1kxYbRp" text="Źmianić Ataku" />
     <string id="V4iU0wRv" text="Zołata" />
     <string id="v5dpjybs" text="Uznaharoda" />
     <string id="V6BAHTnv" text="Kultura Kamandy 2" />
@@ -427,7 +427,7 @@
     <string id="xhnV76OL" text="Prystań Skała" />
     <string id="xILeUbY3" text="Panel Admina" />
     <string id="Xj2FCkQl" text="Śpis Naładžvalnych Siervieraŭ" />
-    <string id="xoXWGYVI" text="·   Vykarystoŭvajcie roznyja abłohavyja mašyny, kab atakavać abo baranić kantrolnyja kropki.{newline}·   Ački adradžeńnia dajucca pa miery zachopu kantrolnych kropak{newline}·   Paśpiachova atakujcie i ŭtrymlivajcie ściah zamka abo adhanicie voraha, kab pieramahčy" />
+    <string id="xoXWGYVI" text="·   Vykarystoŭvajcie roznyja abłohavyja mašyny, kab atakavać abo baranić kantrolnyja kropki.{newline}·   Ački adradžeńnia dajucca pa miery zachopu kantrolnych kropak{newline}·   Paśpiachova atakujcie i ŭtrymlivajcie ściah zamka abo adhaniajcie vorahaŭ, kab pieramahčy" />
     <string id="xq9Vxpyc" text="&lt;a style=&quot;HeadshotTitle.Text&quot; &gt;&lt;b&gt;{TITLE}&lt;/b&gt;&lt;/a&gt;" />
     <string id="XQndveFG" text="Siabroŭski Ahoń: Škoda ŭ Blizkim Boi pa Sabie" />
     <string id="XUKRrgOr" text="Naniesiena {DAMAGE} {DAMAGE_TYPE} škody kaniu." />
@@ -447,14 +447,14 @@
     <string id="yRSjcxBv" text="Vyjšaŭ novy patč. Kali łaska, abnavicie svoj klijent." />
     <string id="YRymCbaa" text="Byŭ Raścisnuty!" />
     <string id="YSKoiyjt" text="SKH" />
-    <string id="YtSQB7rg" text="Abiarycie žadany kłas napačatku raŭnda i vykarystoŭvajcie zołata dla nastupnych adradžeńniaŭ." />
+    <string id="YtSQB7rg" text="Abiarycie pažadany kłas napačatku raŭnda i karystajciesia zołatam dla nastupnych adradžeńniaŭ." />
     <string id="Yvjap05b" text="Chutkaść Ruchu" />
     <string id="YvK6gI6q" text="Uskraina Horada" />
     <string id="yyJejJbO" text="Forma Padbarodka" />
-    <string id="Z27nSqNt" text="Treba dapamoha!" />
-    <string id="zatDiaEI" text="Delehavańnie Kamandavańnia Ŭklučana" />
-    <string id="Zc2f5bhh" text="Zabicie ŭsich vorahaŭ, źniasilcie maral varožaj kamandy abo atrymajcie maksimalnuju maral na kancy raŭnda." />
-    <string id="zHKHwHMr" text="Sielskaja Miascovaść" />
+    <string id="Z27nSqNt" text="Pamažycie!" />
+    <string id="zatDiaEI" text="Delehacyja Kamandavańnia Ŭklučana" />
+    <string id="Zc2f5bhh" text="Zabicie ŭsich vorahaŭ, źniasilcie maral varožaj kamandy abo atrymajcie maksimalnuju maral na prykancy raŭnda." />
+    <string id="zHKHwHMr" text="Viaskovaja Miascovaść" />
     <string id="zmlCRb1M" text="Maks Kolkaść Hulcoŭ" />
     <string id="ZMmrpMPk" text="Šyja" />
     <string id="ztGHtRNf" text="Machlarstva" />
