--- a/пераклады гульні/v1.2.0/Belarusian.Core/ModuleData/Languages/BYc/Native/std_native_strings_xml_by.xml
+++ b/пераклады гульні/v1.2.0/Belarusian.Core/ModuleData/Languages/BYc/Native/std_native_strings_xml_by.xml
@@ -5,11 +5,11 @@
     <string id="05loYcST" text="Удар па Шчыце на Сьпіне" />
     <string id="05w8Tl7n" text="Стэп" />
     <string id="0cpbEvsG" text="Стары Твар" />
-    <string id="0DBQGaka" text="Нанесена шкода наездам дзідаю!" />
-    <string id="0ezfbORI" text="Нарыхтоўка Тыпу Гульні" />
+    <string id="0DBQGaka" text="Нанесена шкода наездам дзідай!" />
+    <string id="0ezfbORI" text="Падрыхтаваны Тып Гульні" />
     <string id="0HTNYQz2" text="Пераключыць" />
     <string id="0P89VyAQ" text="Асіметрыя Твару" />
-    <string id="0WHQKap4" text="Абмежаваньне Часу Абраньня Экіпіяваньня (секундаў)" />
+    <string id="0WHQKap4" text="Абмежаваньне Часу Абраньня Экіпіяваньня (сякунд)" />
     <string id="0xJ3qIlJ" text="Лінія Сківіцы" />
     <string id="180DfbQU" text="Трэніроўчае Поле" />
     <string id="1b2dfc0n" text="Запыт на далучэньне да партыі адхілены." />
@@ -25,17 +25,17 @@
     <string id="22MOa4Fc" text="Вонкавая Вышыня Вачэй" />
     <string id="23INS6nf" text="Патрабуецца Пароль" />
     <string id="26SJhCRD" text="Замяніць на" />
-    <string id="2blpQ3OQ" text="Маркаваньне" />
+    <string id="2blpQ3OQ" text="Прыкметы" />
     <string id="2d0H47C8" text="Адлегласьць паміж Вачамі" />
     <string id="2G3QpSDk" text="Вусны ўвагнутасьць/выпукласьць" />
     <string id="2KrDfHI8" text="Не ўдалося далучыцца да партыі з-за наладаў дазволу платформы." />
     <string id="2QzgefNF" text="Вага Твару" />
     <string id="2Rf2ChRD" text="Глыбіня Брывоў" />
-    <string id="2uynGJbP" text="Перадаваемыя Ваяры" />
+    <string id="2uynGJbP" text="Ваяры на Перадачу" />
     <string id="3AInGztr" text="Торс" />
     <string id="3APdsKEi" text="Кідальны Нож" />
     <string id="3aX5gXmJ" text="Колер Скуры" />
-    <string id="3EbTklMi" text="Вы атрымалі новы значок: {BADGE_NAME}." />
+    <string id="3EbTklMi" text="Вы атрымалі новую адзнаку: {BADGE_NAME}." />
     <string id="3Kkya96j" text="Нага" />
     <string id="3kqFHkZz" text="Таўшчыня Вуснаў" />
     <string id="3syV6ymi" text="тупой" />
@@ -49,7 +49,7 @@
     <string id="4jv2sW4U" text="Гандлёвы Пост" />
     <string id="4NaOKslb" text="-" />
     <string id="4ompPd8W" text="Вашы клан падзяліўся новай аб'явай." />
-    <string id="4PrfimcK" text="Значок" />
+    <string id="4PrfimcK" text="Адзнака" />
     <string id="4SWcDUJC" text="Крэпасьць Айзар" />
     <string id="4wLU6s4S" text="Жывот" />
     <string id="4yiB8CRO" text="Не!" />
@@ -64,7 +64,7 @@
     <string id="621DbiOw" text="Асіметрыя Носа" />
     <string id="64n3piBf" text="Усяго Гульняў" />
     <string id="66aByatH" text="Дазволіць Тэкст" />
-    <string id="6DBVzw9r" text="Зборка" />
+    <string id="6DBVzw9r" text="Камплекцыя" />
     <string id="6usZYAVm" text="Камунікацыйная Абраза" />
     <string id="6yZnboe6" text="Памер Вачніцы" />
     <string id="74tYdiOb" text="Абірайце ваяроў з розумам у адпаведнасьці з патрэбамі вашай каманды. Колькасьць ваяроў вызначаецца іх сілаю." />
@@ -154,7 +154,7 @@
     <string id="Dxmq32qW" text="Атака" />
     <string id="dZ4xp6Lu" text="Даўжыня Скроні" />
     <string id="e0KdfaNe" text="Захаваць як" />
-    <string id="e139gKZc" text="Вярнуцца ў Гульню" />
+    <string id="e139gKZc" text="Вярнуцца да Гульні" />
     <string id="E3tCWX7w" text="Квадрат" />
     <string id="eALf5d30" text="Дзякуй!" />
     <string id="ecUwABe2" text="Пустэльня" />
@@ -369,9 +369,9 @@
     <string id="tUETZiIp" text="Шалом" />
     <string id="tvDuF1vU" text="Хуткасьць Аблогавай Вежы (адсоткаў)" />
     <string id="tvHQcaC1" text="Вышыня Скулаў" />
-    <string id="tYuSNFuD" text="Значкі" />
+    <string id="tYuSNFuD" text="Адзнакі" />
     <string id="U1em3vrJ" text="Плечы" />
-    <string id="U3LxBtL0" text="Увядзіце пароль" />
+    <string id="U3LxBtL0" text="Надрукуйце пароль" />
     <string id="U4xlUBHg" text="Шырыня Носа" />
     <string id="U6h8eatq" text="Камандны Матч да Сьмерці" />
     <string id="u8j8nN5U" text="Тварам да Ворага" />
@@ -381,7 +381,7 @@
     <string id="UEmw71kN" text="{REQUESTER} адправіў вам сяброўскі запыт." />
     <string id="uGM8DWrm" text="Конь" />
     <string id="UHIZLFBn" text="Забіты {TROOP_NAME}" />
-    <string id="UJaQuEpD" text="Пераключыць Сядланьне Каня" />
+    <string id="UJaQuEpD" text="Асядлаць/Зьлесьці з Каня" />
     <string id="Umb8XsZH" text="Колючай" />
     <string id="UPH3hI5P" text="Стварэньне Матча" />
     <string id="UQabkhbG" text="Наезд каня нанёс {DAMAGE} {DAMAGE_TYPE} шкоды." />
@@ -389,7 +389,7 @@
     <string id="UrZvjCfE" text="Вашы конь атрымаў {DAMAGE} {DAMAGE_TYPE} шкоды." />
     <string id="UUKzc88q" text="Камера Назіральніка" />
     <string id="UvIsHvrt" text="Рака" />
-    <string id="V1kxYbRp" text="Пераключыць Агонь" />
+    <string id="V1kxYbRp" text="Зьмяніць Атаку" />
     <string id="V4iU0wRv" text="Золата" />
     <string id="v5dpjybs" text="Узнагарода" />
     <string id="V6BAHTnv" text="Культура Каманды 2" />
@@ -427,7 +427,7 @@
     <string id="xhnV76OL" text="Прыстань Скала" />
     <string id="xILeUbY3" text="Панэль Адміна" />
     <string id="Xj2FCkQl" text="Сьпіс Наладжвальных Сервераў" />
-    <string id="xoXWGYVI" text="·   Выкарыстоўвайце розныя аблогавыя машыны, каб атакаваць або бараніць кантрольныя кропкі.{newline}·   Ачкі адраджэньня даюцца па меры захопу кантрольных кропак{newline}·   Пасьпяхова атакуйце і ўтрымлівайце сьцяг замка або адганіце ворага, каб перамагчы" />
+    <string id="xoXWGYVI" text="·   Выкарыстоўвайце розныя аблогавыя машыны, каб атакаваць або бараніць кантрольныя кропкі.{newline}·   Ачкі адраджэньня даюцца па меры захопу кантрольных кропак{newline}·   Пасьпяхова атакуйце і ўтрымлівайце сьцяг замка або адганяйце ворагаў, каб перамагчы" />
     <string id="xq9Vxpyc" text="&lt;a style=&quot;HeadshotTitle.Text&quot; &gt;&lt;b&gt;{TITLE}&lt;/b&gt;&lt;/a&gt;" />
     <string id="XQndveFG" text="Сяброўскі Агонь: Шкода ў Блізкім Боі па Сабе" />
     <string id="XUKRrgOr" text="Нанесена {DAMAGE} {DAMAGE_TYPE} шкоды каню." />
@@ -447,14 +447,14 @@
     <string id="yRSjcxBv" text="Выйшаў новы патч. Калі ласка, абнавіце свой кліент." />
     <string id="YRymCbaa" text="Быў Расьціснуты!" />
     <string id="YSKoiyjt" text="СКГ" />
-    <string id="YtSQB7rg" text="Абярыце жаданы клас напачатку раўнда і выкарыстоўвайце золата для наступных адраджэньняў." />
+    <string id="YtSQB7rg" text="Абярыце пажаданы клас напачатку раўнда і карыстайцеся золатам для наступных адраджэньняў." />
     <string id="Yvjap05b" text="Хуткасьць Руху" />
     <string id="YvK6gI6q" text="Ускраіна Горада" />
     <string id="yyJejJbO" text="Форма Падбародка" />
-    <string id="Z27nSqNt" text="Трэба дапамога!" />
-    <string id="zatDiaEI" text="Дэлегаваньне Камандаваньня Ўключана" />
-    <string id="Zc2f5bhh" text="Забіце ўсіх ворагаў, зьнясільце мараль варожай каманды або атрымайце максімальную мараль на канцы раўнда." />
-    <string id="zHKHwHMr" text="Сельская Мясцовасьць" />
+    <string id="Z27nSqNt" text="Памажыце!" />
+    <string id="zatDiaEI" text="Дэлегацыя Камандаваньня Ўключана" />
+    <string id="Zc2f5bhh" text="Забіце ўсіх ворагаў, зьнясільце мараль варожай каманды або атрымайце максімальную мараль на прыканцы раўнда." />
+    <string id="zHKHwHMr" text="Вясковая Мясцовасьць" />
     <string id="zmlCRb1M" text="Макс Колькасьць Гульцоў" />
     <string id="ZMmrpMPk" text="Шыя" />
     <string id="ztGHtRNf" text="Махлярства" />
