--- a/пераклады модаў/Ancient Civilization/v1.1/Belarusian.Ancient Civilization/ModuleData/Languages/BYc/cts_dacian_items.xml
+++ b/пераклады модаў/Ancient Civilization/v1.1/Belarusian.Ancient Civilization/ModuleData/Languages/BYc/cts_dacian_items.xml
@@ -7,8 +7,8 @@
   <string id="cts_dacian_hat_c1.name" text="{.Muzcynski}Дакійскі Каўпак [cts]"/>
   <string id="cts_dacian_hat_b1.name" text="{.Muzcynski}Дакійскі Каўпак [cts]"/>
   <string id="cts_dacian_hat_c.name" text="{.Muzcynski}Дакійскі Каўпак [cts]"/>
-  <string id="cts_dacian_obraz_lana_iron.name" text="{.Muzcynski}Дакійскі Жалезны Халкідзійскі Шлем [cts]"/>
-  <string id="cts_dacian_obraz_lana_bronze.name" text="{.Muzcynski}Дакійскі Бронзавы Халкідзійскі Шлем [cts]"/>
+  <string id="cts_dacian_obraz_lana_iron.name" text="{.Muzcynski}Дака-Халкідзійскі Жалезны Шлем [cts]"/>
+  <string id="cts_dacian_obraz_lana_bronze.name" text="{.Muzcynski}Дака-Халкідзійскі Бронзавы Шлем [cts]"/>
   <string id="cts_dacian_helmet_e.name" text="{.Muzcynski}Дакійскі Эмбасаваны Купалаваты Шлем [cts]"/>
   <string id="cts_dacian_helmet_e1.name" text="{.Muzcynski}Дакійскі Эмбасаваны Купалаваты Шлем [cts]"/>
   <string id="cts_dacian_helmet_e2.name" text="{.Muzcynski}Дакійскі Эмбасаваны Купалаваты Шлем [cts]"/>
@@ -37,10 +37,10 @@
   <string id="cts_dacian_tall_helmet_round_top.name" text="{.Muzcynski}Дакійскі Эмбасаваны Бронзавы Поўны Шлем [cts]"/>
   <string id="cts_dacian_tall_helmet_round_top2.name" text="{.Muzcynski}Дакійскі Эмбасаваны Поўны Шлем [cts]"/>
   <string id="cts_dacian_helmet_eagle.name" text="{.Muzcynski}Дакійскі Эмбасаваны Шлем з Арлом [cts]"/>
-  <string id="cts_dac_cucuteni_helm.name" text="{.Muzcynski}Дакійскі Залаты Кукутэнскі Шлем [cts]"/>
-  <string id="cts_dacian_cotofanesti_helm.name" text="{.Muzcynski}Дакійскі Залаты Котафэнісційскі Шлем [cts]"/>
-  <string id="cts_dacian_peretu_helm.name" text="{.Muzcynski}Дакійскі Срэбны Перэтыйскі Шлем [cts]"/>
-  <string id="cts_dac_silver_b.name" text="{.Muzcynski}Дакійскі Срэбны Перэтыйскі Шлем А [cts]"/>
+  <string id="cts_dac_cucuteni_helm.name" text="{.Muzcynski}Дака-Кукутэнскі Залаты Шлем [cts]"/>
+  <string id="cts_dacian_cotofanesti_helm.name" text="{.Muzcynski}Дака-Котафэнісьційскі Залаты Шлем [cts]"/>
+  <string id="cts_dacian_peretu_helm.name" text="{.Muzcynski}Дака-Перэтыйскі Срэбны Шлем [cts]"/>
+  <string id="cts_dac_silver_b.name" text="{.Muzcynski}Дака-Перэтыйскі Срэбны Шлем А [cts]"/>
   <string id="cts_pelerina_dac_a1.name" text="{.Zanocy}Дакійская Накідка [cts]"/>
   <string id="cts_pelerina_dac_b.name" text="{.Zanocy}Дакійская Накідка [cts]"/>
   <string id="cts_pelerina_dac_a.name" text="{.Zanocy}Дакійская Накідка [cts]"/>
