--- a/пераклады модаў/Ancient Civilization/v1.1/Belarusian.Ancient Civilization/ModuleData/Languages/BYc/cts_roman_items.xml
+++ b/пераклады модаў/Ancient Civilization/v1.1/Belarusian.Ancient Civilization/ModuleData/Languages/BYc/cts_roman_items.xml
@@ -15,10 +15,10 @@
   <string id="cts_roman_lorica_cenurio_a.name" text="{.Zanocy}Рымская Лорыка Цэнтурыё А [cts]"/>
   <string id="cts_roman_lorica_scale_pterges.name" text="{.Zanocy}Рымская Лорыка Луската з Птэругамі [cts]"/>
   <string id="cts_roman_lorica_scale_pterges_a.name" text="{.Zanocy}Рымская Лорыка Луската з Птэругамі A [cts]"/>
-  <string id="cts_roman_syrian_archer_armor_a.name" text="{.Zanocy}Рымская Сірыйская Браня Лучніка А [cts]"/>
-  <string id="cts_roman_syrian_archer_armor_b.name" text="{.Zanocy}Рымская Сірыйская Браня Лучніка Б [cts]"/>
-  <string id="cts_roman_syrian_archer_armor_c.name" text="{.Zanocy}Рымская Сірыйская Браня Лучніка В [cts]"/>
-  <string id="cts_roman_syrian_archer_armor_d.name" text="{.Zanocy}Рымская Сірыйская Браня Лучніка Г [cts]"/>
+  <string id="cts_roman_syrian_archer_armor_a.name" text="{.Zanocy}Рыма-Сірыйская Браня Лучніка А [cts]"/>
+  <string id="cts_roman_syrian_archer_armor_b.name" text="{.Zanocy}Рыма-Сірыйская Браня Лучніка Б [cts]"/>
+  <string id="cts_roman_syrian_archer_armor_c.name" text="{.Zanocy}Рыма-Сірыйская Браня Лучніка В [cts]"/>
+  <string id="cts_roman_syrian_archer_armor_d.name" text="{.Zanocy}Рыма-Сірыйская Браня Лучніка Г [cts]"/>
   <string id="cts_roman_tunic_a.name" text="{.Zanocy}Рымская Туніка А [cts]"/>
   <string id="cts_roman_tunic_b.name" text="{.Zanocy}Рымская Туніка Б [cts]"/>
   <string id="cts_roman_tunic_a1.name" text="{.Zanocy}Рымская Туніка А1 [cts]"/>
@@ -36,7 +36,7 @@
   <string id="cts_roman_helmet_cav_mask4.name" text="{.Muzcynski}Рымскі Шалом Вершніка з Маскай Г [cts]"/>
   <string id="cts_roman_republican_helmet_horse_tail.name" text="{.Muzcynski}Рымскі Рэспубліканскі Шалом з Хвастом Каня А [cts]"/>
   <string id="cts_roman_republican_helmet_horse_tail_a.name" text="{.Muzcynski}Рымскі Рэспубліканскі Шалом з Хвастом Каня Б [cts]"/>
-  <string id="cts_roman_syrian_helmet_a.name" text="{.Muzcynski}Рымскі Сірыйскі Шалом А [cts]"/>
+  <string id="cts_roman_syrian_helmet_a.name" text="{.Muzcynski}Рыма-Сірыйскі Шалом А [cts]"/>
   <string id="cts_roman_caligae_pants_a.name" text="{.Mnozny}Рымскія Штаны з Калігамі А [cts]"/>
   <string id="cts_roman_general_boot.name" text="{.Mnozny}Рымскія Генеральскія Боты [cts]"/>
   <string id="cts_roman_long_pants_graves.name" text="{.Mnozny}Рымскія Доўгія Штаны з Паножамі А [cts]"/>
