--- a/пераклады модаў/Ancient Civilization/v1.1/Belarusian.Ancient Civilization/ModuleData/Languages/BYl/cts_dacian_items.xml
+++ b/пераклады модаў/Ancient Civilization/v1.1/Belarusian.Ancient Civilization/ModuleData/Languages/BYl/cts_dacian_items.xml
@@ -7,8 +7,8 @@
   <string id="cts_dacian_hat_c1.name" text="{.Muzcynski}Dakijski Kaŭpak [cts]"/>
   <string id="cts_dacian_hat_b1.name" text="{.Muzcynski}Dakijski Kaŭpak [cts]"/>
   <string id="cts_dacian_hat_c.name" text="{.Muzcynski}Dakijski Kaŭpak [cts]"/>
-  <string id="cts_dacian_obraz_lana_iron.name" text="{.Muzcynski}Dakijski Žalezny Chałkidzijski Šlem [cts]"/>
-  <string id="cts_dacian_obraz_lana_bronze.name" text="{.Muzcynski}Dakijski Bronzavy Chałkidzijski Šlem [cts]"/>
+  <string id="cts_dacian_obraz_lana_iron.name" text="{.Muzcynski}Daka-Chałkidzijski Žalezny Šlem [cts]"/>
+  <string id="cts_dacian_obraz_lana_bronze.name" text="{.Muzcynski}Daka-Chałkidzijski Bronzavy Šlem [cts]"/>
   <string id="cts_dacian_helmet_e.name" text="{.Muzcynski}Dakijski Embasavany Kupałavaty Šlem [cts]"/>
   <string id="cts_dacian_helmet_e1.name" text="{.Muzcynski}Dakijski Embasavany Kupałavaty Šlem [cts]"/>
   <string id="cts_dacian_helmet_e2.name" text="{.Muzcynski}Dakijski Embasavany Kupałavaty Šlem [cts]"/>
@@ -37,10 +37,10 @@
   <string id="cts_dacian_tall_helmet_round_top.name" text="{.Muzcynski}Dakijski Embasavany Bronzavy Poŭny Šlem [cts]"/>
   <string id="cts_dacian_tall_helmet_round_top2.name" text="{.Muzcynski}Dakijski Embasavany Poŭny Šlem [cts]"/>
   <string id="cts_dacian_helmet_eagle.name" text="{.Muzcynski}Dakijski Embasavany Šlem z Arłom [cts]"/>
-  <string id="cts_dac_cucuteni_helm.name" text="{.Muzcynski}Dakijski Załaty Kukutenski Šlem [cts]"/>
-  <string id="cts_dacian_cotofanesti_helm.name" text="{.Muzcynski}Dakijski Załaty Kotafeniscijski Šlem [cts]"/>
-  <string id="cts_dacian_peretu_helm.name" text="{.Muzcynski}Dakijski Srebny Pieretyjski Šlem [cts]"/>
-  <string id="cts_dac_silver_b.name" text="{.Muzcynski}Dakijski Srebny Pieretyjski Šlem A [cts]"/>
+  <string id="cts_dac_cucuteni_helm.name" text="{.Muzcynski}Daka-Kukutenski Załaty Šlem [cts]"/>
+  <string id="cts_dacian_cotofanesti_helm.name" text="{.Muzcynski}Daka-Kotafeniścijski Załaty Šlem [cts]"/>
+  <string id="cts_dacian_peretu_helm.name" text="{.Muzcynski}Daka-Pieretyjski Srebny Šlem [cts]"/>
+  <string id="cts_dac_silver_b.name" text="{.Muzcynski}Daka-Pieretyjski Srebny Šlem A [cts]"/>
   <string id="cts_pelerina_dac_a1.name" text="{.Zanocy}Dakijskaja Nakidka [cts]"/>
   <string id="cts_pelerina_dac_b.name" text="{.Zanocy}Dakijskaja Nakidka [cts]"/>
   <string id="cts_pelerina_dac_a.name" text="{.Zanocy}Dakijskaja Nakidka [cts]"/>
