--- a/пераклады модаў/Ancient Civilization/v1.1/Belarusian.Ancient Civilization/ModuleData/Languages/BYl/cts_roman_items.xml
+++ b/пераклады модаў/Ancient Civilization/v1.1/Belarusian.Ancient Civilization/ModuleData/Languages/BYl/cts_roman_items.xml
@@ -15,10 +15,10 @@
   <string id="cts_roman_lorica_cenurio_a.name" text="{.Zanocy}Rymskaja Łoryka Centuryjo A [cts]"/>
   <string id="cts_roman_lorica_scale_pterges.name" text="{.Zanocy}Rymskaja Łoryka Łuskata z Pteruhami [cts]"/>
   <string id="cts_roman_lorica_scale_pterges_a.name" text="{.Zanocy}Rymskaja Łoryka Łuskata z Pteruhami A [cts]"/>
-  <string id="cts_roman_syrian_archer_armor_a.name" text="{.Zanocy}Rymskaja Siryjskaja Brania Łučnika A [cts]"/>
-  <string id="cts_roman_syrian_archer_armor_b.name" text="{.Zanocy}Rymskaja Siryjskaja Brania Łučnika B [cts]"/>
-  <string id="cts_roman_syrian_archer_armor_c.name" text="{.Zanocy}Rymskaja Siryjskaja Brania Łučnika V [cts]"/>
-  <string id="cts_roman_syrian_archer_armor_d.name" text="{.Zanocy}Rymskaja Siryjskaja Brania Łučnika H [cts]"/>
+  <string id="cts_roman_syrian_archer_armor_a.name" text="{.Zanocy}Ryma-Siryjskaja Brania Łučnika A [cts]"/>
+  <string id="cts_roman_syrian_archer_armor_b.name" text="{.Zanocy}Ryma-Siryjskaja Brania Łučnika B [cts]"/>
+  <string id="cts_roman_syrian_archer_armor_c.name" text="{.Zanocy}Ryma-Siryjskaja Brania Łučnika V [cts]"/>
+  <string id="cts_roman_syrian_archer_armor_d.name" text="{.Zanocy}Ryma-Siryjskaja Brania Łučnika H [cts]"/>
   <string id="cts_roman_tunic_a.name" text="{.Zanocy}Rymskaja Tunika A [cts]"/>
   <string id="cts_roman_tunic_b.name" text="{.Zanocy}Rymskaja Tunika B [cts]"/>
   <string id="cts_roman_tunic_a1.name" text="{.Zanocy}Rymskaja Tunika A1 [cts]"/>
@@ -36,7 +36,7 @@
   <string id="cts_roman_helmet_cav_mask4.name" text="{.Muzcynski}Rymski Šałom Vieršnika z Maskaj H [cts]"/>
   <string id="cts_roman_republican_helmet_horse_tail.name" text="{.Muzcynski}Rymski Respublikanski Šałom z Chvastom Kania A [cts]"/>
   <string id="cts_roman_republican_helmet_horse_tail_a.name" text="{.Muzcynski}Rymski Respublikanski Šałom z Chvastom Kania B [cts]"/>
-  <string id="cts_roman_syrian_helmet_a.name" text="{.Muzcynski}Rymski Siryjski Šałom A [cts]"/>
+  <string id="cts_roman_syrian_helmet_a.name" text="{.Muzcynski}Ryma-Siryjski Šałom A [cts]"/>
   <string id="cts_roman_caligae_pants_a.name" text="{.Mnozny}Rymskija Štany z Kalihami A [cts]"/>
   <string id="cts_roman_general_boot.name" text="{.Mnozny}Rymskija Hienieralskija Boty [cts]"/>
   <string id="cts_roman_long_pants_graves.name" text="{.Mnozny}Rymskija Doŭhija Štany z Panožami A [cts]"/>
