--- a/пераклады модаў/The Old Realms/0.3.5/Belarusian.The Old Realms/ModuleData/Languages/BYl/TOR_Core/tor_settlements.xml
+++ b/пераклады модаў/The Old Realms/0.3.5/Belarusian.The Old Realms/ModuleData/Languages/BYl/TOR_Core/tor_settlements.xml
@@ -453,6 +453,8 @@
   <string id="Settlements.Settlement.text.village_BE1_2" text="The village of Turnefol, the last settlement on the River Brienne before Castle Bryjon. The villagers here take care of great herds of cattle, providing much of the meat needed by the dukedom."/>
   <string id="Settlements.Settlement.name.village_BE1_3" text="Bukier"/>
   <string id="Settlements.Settlement.text.village_BE1_3" text="A moderately rich farming village near Bryjon, Bukier acts as a crossroads between the surrounding villages and Bryjon so it sees a decent bit of traffic, thanks to the local toll booth the village is slightly more prosperous than the others, but still just as run down."/>
+  <string id="Settlements.Settlement.name.town_BE2" text="Šatu Fruńćjer"/>
+  <string id="Settlements.Settlement.name.town_BE2.desc" text="A site of many sieges from Norsca in ages past, ever since Alaron the Intrepid aided in the defence against Bjorn Irongrim and his army of mercenaries, the frequency of raids on Brionne have died down significantly. Due to its strategic location, Chateau Frontière holds many relics from the crusades."/>
   <string id="Settlements.Settlement.name.village_BE2_1" text="Lunel"/>
   <string id="Settlements.Settlement.text.village_BE2_1" text="Lunel sees many travellers pass by as they live close to the bridge that connects them with Karkasson, be they adventuring knights or merchants. The village therefore is looked after more than others,  so passing  nobles can at least somewhat bear to look at it."/>
   <string id="Settlements.Settlement.text.village_BE2_2" text="Gaillac doesnt get many visitors, being so out of the way, yet caravans often leave to deliver crops to Chateau Frontière. Gaillac is one of the biggest food producers of Bryjon.Gaillac, a remote location that often goes unnoticed, being so far away from the main roads. The village is a bustling hub for caravans that transport crops to Chateau Frontière. Gaillac holds a critical role in Brionnes food production."/>
@@ -506,7 +508,7 @@
   <string id="Settlements.Settlement.text.village_CC1_1" text="Located near the Border of Karkasson and Bryjon on the river Brienne, maintains a trusting relationship with the outlying villages of Lunel and Vauvert, having been trade partners for ages past."/>
   <string id="Settlements.Settlement.name.village_CC1_2" text="Albi"/>
   <string id="Settlements.Settlement.text.village_CC1_2" text="Located at the base of the Irana Mountains, the village of Albi has been host to countless raids from Greenskin tribes. As such, the shepherds have become battle hardened and will defend their village from any oncoming monstrosities."/>
-  <string id="Settlements.Settlement.name.village_CC1_3" text="Cahors"/>
+  <string id="Settlements.Settlement.name.village_CC1_3" text="Kiaor"/>
   <string id="Settlements.Settlement.text.village_CC1_3" text="East of Karkasson lies the farm village of Cahors. Although not very populous, Cahors is an asset to Castle Karkasson, providing most of their grain to feed the fortress town."/>
   <string id="Settlements.Settlement.name.town_CC2" text="Ciura"/>
   <string id="Settlements.Settlement.text.town_CC2" text="Located in the Vaults , the City of Ciura is the capital of the Barony of Savoie. The region is influenced heavily by nearby Tilea, despite this the city and people are steadfastly loyal to Bretonnia. Holding the famed relic, the “Shroud of Gilles le Breton” the City of Ciura is a Pilgrimage site to all who follow the Lady of the Lake, and all who seek visions of the Lady."/>
@@ -564,7 +566,7 @@
   <string id="Settlements.Settlement.text.castle_village_QU2_1" text="Nice is an old village, so old in fact that some Nobles suspect that the fey originally inhabited it. Despite this suspicion, the Fey have never disturbed the village, at least not in a manner particular compared to the normal demands and restrictions."/>
   <string id="Settlements.Settlement.name.castle_village_QU2_2" text="Łabiež"/>
   <string id="Settlements.Settlement.text.castle_village_QU2_2" text="On the river Brienne, Łabiež sits mostly undisturbed by either invaders or their own lords. The people here are known for their cheese, which is commonly exported out of the Kingdom."/>
-  <string id="Settlements.Settlement.name.castle_village_QU2_3" text="Grasse"/>
+  <string id="Settlements.Settlement.name.castle_village_QU2_3" text="Hrass"/>
   <string id="Settlements.Settlement.text.castle_village_QU2_3" text="Along the road to Bryjon is the village of Grasse, named for the tall grasses that grow in this region of Bretonnia. The people here raise notably large cattle on the grasses."/>
   <string id="Settlements.Settlement.name.castle_QU3" text="Zamak Łahije"/>
   <string id="Settlements.Settlement.text.castle_QU3" text="Castle Łahije is both a castle and a major river port along the River Brienne. Nearby is the Grave of Cuileux, a Quenellian holy site where the founder of the Dukedom is entered."/>
